--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2025 Waqar Ahmad - MIT License -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -992,3 +993,4 @@
     </script>
 </body>
 </html>
+<!-- Copyright (c) 2025 Waqar Ahmad - MIT License -->
